--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     run-on: ubuntu-latest
     steps:
     - name: loginh to DockerHub
-    use: docker/login-action@v2
+    uses: docker/login-action@v2
     with:
       username: ${{ secrets.DOCKER_HUB_USERNAME }}
       password: ${{ secrets.DOCKER_HUB_TOKEN }}
