--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,15 +7,15 @@ name: release
 on: workflow_dispatch
 
 jobs:
-  build-containers:
+  building-containers:
     name: Build containers
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
-    - name: loginh to DockerHub
-    uses: docker/login-action@v2
-    with:
-      username: ${{ secrets.DOCKER_HUB_USERNAME }}
-      password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
     # - name: Build and push to Docker Hub
     #   uses: docker/build-push-action@v4
 
