--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
 name: release
 
-# on:
-#   push:
-#     tags:
-#       - 'v*.*.*'
-on: workflow_dispatch
+on:
+  push:
+    tags:
+      - 'v*.*.*'
+
 
 jobs:
   building-containers:
