--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,18 +9,26 @@ jobs:
     name: Build containers
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout Code
+      uses: actions/checkout@v3
+
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: name/app
+
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
-    - name: Checkout Code
-      uses: actions/checkout@v3
-    - name: Create Tag for Docker Image
-      id: vars
-      run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-    - name: Check Tag for Docker Image
-      run: "echo Docker image will be:  ${{ steps.vars.outputs.sha_short }}"
+
+    # - name: Create Tag for Docker Image
+    #   id: vars
+    #   run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+    # - name: Check Tag for Docker Image
+    #   run: "echo Docker image will be:  ${{ steps.vars.outputs.sha_short }}"
     # - name: Build and push to Docker Hub
     #   uses: docker/build-push-action@v4
     #   with:
